# telegram_nl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/telegram_nl/: __init__.py  natural_language.py
tests/: test_natural_language.py
